--- a/libs/client-web/account/domain/account-data/src/lib/components/new-password-form/new-password-form.component.html
+++ b/libs/client-web/account/domain/account-data/src/lib/components/new-password-form/new-password-form.component.html
@@ -2,7 +2,8 @@
   class="flex flex-col gap-2 bg-content-background p-4 rounded-base"
   (ngSubmit)="updatePassword()"
 >
-  <lib-form-field label="New password">
+  <lib-form-field label="New password" [isRequired]="true">
+    @let newPassword = form.controls.newPassword;
     <p-password
       slot="input"
       [fluid]="true"
@@ -10,24 +11,51 @@
       [toggleMask]="true"
       [feedback]="false"
     />
+    @if (newPassword.invalid && newPassword.dirty) {
+      <ng-container slot="error-message">
+        @if (newPassword.getError('minlength')) {
+          <lib-error-message
+            message="Password should have at least 8 characters"
+          />
+        } @else if (newPassword.getError('required')) {
+          <lib-error-message />
+        }
+      </ng-container>
+    }
   </lib-form-field>
-  <lib-form-field label="Repeat new password">
+  <lib-form-field label="Repeat new password" [isRequired]="true">
+    @let newPasswordConfirmation = form.controls.newPasswordConfirmation;
     <p-password
       slot="input"
       [fluid]="true"
-      [formControl]="form.controls.newPasswordConfirmed"
+      [formControl]="newPasswordConfirmation"
       [toggleMask]="true"
       [feedback]="false"
     />
+
+    @if (newPasswordConfirmation.invalid && newPasswordConfirmation.dirty) {
+      <ng-container slot="error-message">
+        @if (newPasswordConfirmation.getError('required')) {
+          <lib-error-message />
+        } @else if (newPasswordConfirmation.getError('passwordMismatch')) {
+          <lib-error-message message="Passwords are different" />
+        }
+      </ng-container>
+    }
   </lib-form-field>
-  <lib-form-field label="Old password">
+  <lib-form-field label="Old password" [isRequired]="true">
+    @let oldPassword = form.controls.oldPassword;
     <p-password
       slot="input"
       [fluid]="true"
-      [formControl]="form.controls.oldPassword"
+      [formControl]="oldPassword"
       [toggleMask]="true"
       [feedback]="false"
     />
+
+    @if (oldPassword.invalid && oldPassword.dirty) {
+      <lib-error-message />
+    }
   </lib-form-field>
   <div class="grid grid-cols-2 gap-4 mt-4">
     <p-button
@@ -36,17 +64,11 @@
       label="Cancel"
       (onClick)="setEditingField(null)"
     />
-    <div
-      [pTooltip]="form.invalid ? 'Form is invalid' : ''"
-      tooltipPosition="top"
-    >
-      <p-button
-        type="submit"
-        [disabled]="form.invalid"
-        severity="secondary"
-        styleClass="w-full"
-        label="Save"
-      />
-    </div>
+    <p-button
+      type="submit"
+      severity="secondary"
+      styleClass="w-full"
+      label="Save"
+    />
   </div>
 </form>
