--- a/libs/client-web/account/domain/addresses/src/lib/components/address-form/address-form.component.html
+++ b/libs/client-web/account/domain/addresses/src/lib/components/address-form/address-form.component.html
@@ -185,9 +185,9 @@
       styleClass="w-full"
     />
     <div
-      [pTooltip]="form.invalid ? 'Form has validation errors' : ''"
+      [pTooltip]="tooltipMessage()"
       tooltipPosition="top"
-      tooltipStyleClass="min-w-max"
+      tooltipStyleClass="min-w-fit max-w-40"
     >
       <p-button
         severity="secondary"
