--- a/libs/client-web/cart/feature/cart-sidebar/src/lib/cart-sidebar.component.html
+++ b/libs/client-web/cart/feature/cart-sidebar/src/lib/cart-sidebar.component.html
@@ -35,9 +35,9 @@
         />
       } @empty {
         <div class="text-center flex flex-col gap-4 mt-4">
-          <span class="text-4xl">Your cart is empty!</span>
+          <span class="text-4xl">Oops! Your cart is empty.</span>
           <span class="text-lg text-muted-color">
-            You should add something to it.
+            Let’s fill it with some great books!
           </span>
         </div>
       }
