--- a/libs/client-web/cart/feature/order-process/src/lib/components/payment-method/six-digit-code-form/six-digit-code-form.component.html
+++ b/libs/client-web/cart/feature/order-process/src/lib/components/payment-method/six-digit-code-form/six-digit-code-form.component.html
@@ -1,5 +1,1 @@
-<p-inputOtp
-  [formControl]="sixDigitNumberControl"
-  class="six-digit-code-form"
-  [length]="6"
-/>
+<p-inputOtp [formControl]="sixDigitNumberControl" styleClass="" [length]="6" />
