--- a/libs/client-web/account/domain/account-data/src/lib/components/new-email-form/new-email-form.component.html
+++ b/libs/client-web/account/domain/account-data/src/lib/components/new-email-form/new-email-form.component.html
@@ -1,7 +1,7 @@
 <form
   class="flex flex-col gap-2 bg-content-background p-4 rounded-base"
   [formGroup]="form"
-  (ngSubmit)="updateEmail()"
+  (ngSubmit)="submit()"
 >
   <lib-form-field label="Current email">
     <input pInputText slot="input" [value]="userEmail()" [disabled]="true" />
