--- a/libs/client-web/cart/feature/order-process/src/lib/components/payment-method/payment-method.component.html
+++ b/libs/client-web/cart/feature/order-process/src/lib/components/payment-method/payment-method.component.html
@@ -1,39 +1,77 @@
 <lib-section-wrapper header="Payment method">
   @if (loading()) {
-  <p-skeleton libOrderProcessItem width="100%" height="3rem" />
-  <p-skeleton libOrderProcessItem width="100%" height="3rem" />
-  <p-skeleton libOrderProcessItem width="100%" height="3rem" />
+    <p-skeleton libOrderProcessItem width="100%" height="3rem" />
+    <p-skeleton libOrderProcessItem width="100%" height="3rem" />
+    <p-skeleton libOrderProcessItem width="100%" height="3rem" />
   } @else {
-  <button
-    libOrderProcessItem
-    [isActive]="selectedPaymentMethod() === payments()[0]"
-    (click)="selectPaymentMethod(payments()[0])"
-    class="flex items-center justify-between gap-4"
-  >
-    <span class="flex items-center text-lg gap-4">
-      <span class="pi pi-credit-card"></span>
-      <span>{{ payments()[0] }}</span>
-    </span>
-    <span class="">Free</span>
-  </button>
+    <div>
+      <button
+        libOrderProcessItem
+        [isActive]="selectedPaymentMethod() === payments()[0]"
+        (click)="selectPaymentMethod(payments()[0])"
+        class="flex items-center justify-between gap-4"
+      >
+        <span class="flex items-center text-lg gap-4">
+          <span class="pi pi-credit-card"></span>
+          <span>{{ payments()[0] }}</span>
+        </span>
+        <span class="">Free</span>
+      </button>
 
-  @if (selectedPaymentMethod() === debitCard) {
-  <lib-credit-card-form />
+      <lib-toggleable-content
+        [isExpanded]="selectedPaymentMethod() === creditCardType"
+      >
+        <div class="flex items-center justify-between p-4">
+          <div class="flex items-center gap-4">
+            <img class="bg-white w-6" src="assets/icons/visa-card.svg" />
+            <img class="bg-white w-6" src="assets/icons/mastercard.svg" />
+            <span> {{ creditCard().data?.number }}</span>
+          </div>
+          <p-button
+            icon="pi pi-pencil"
+            (onClick)="showCreditCardForm('update')"
+          />
+        </div>
+
+        <p-button
+          label="Add"
+          severity="secondary"
+          styleClass="w-full"
+          (onClick)="showCreditCardForm('add')"
+        />
+      </lib-toggleable-content>
+    </div>
+
+    <button
+      libOrderProcessItem
+      [isActive]="selectedPaymentMethod() === payments()[1]"
+      (click)="selectPaymentMethod(payments()[1])"
+      class="flex items-center justify-between gap-4 z-10"
+    >
+      <span class="flex items-center text-lg gap-4">
+        <span class="pi pi-wallet"></span>
+        <span>{{ payments()[1] }}</span>
+      </span>
+      <span class="">Free</span>
+    </button>
+    <lib-toggleable-content
+      [isExpanded]="selectedPaymentMethod() === sixDigitCodeType"
+    >
+      <lib-six-digit-code-form />
+    </lib-toggleable-content>
   }
-
-  <button
-    libOrderProcessItem
-    [isActive]="selectedPaymentMethod() === payments()[1]"
-    (click)="selectPaymentMethod(payments()[1])"
-    class="flex items-center justify-between gap-4"
-  >
-    <span class="flex items-center text-lg gap-4">
-      <span class="pi pi-wallet"></span>
-      <span>{{ payments()[1] }}</span>
-    </span>
-    <span class="">Free</span>
-  </button>
-  @if (selectedPaymentMethod() === sixDigitCode) {
-  <lib-six-digit-code-form />
-  } }
 </lib-section-wrapper>
+
+<p-dialog
+  [header]="
+    creditCardFormType() === 'add' ? 'Add credit card' : 'Update credit card'
+  "
+  [visible]="isCreditCardFormVisible()"
+  (visibleChange)="hideCreditCardForm()"
+  styleClass="w-full max-w-[48rem] mx-4 w-full"
+  [modal]="true"
+>
+  @if (isCreditCardFormVisible()) {
+    <lib-credit-card-form class="w-full" />
+  }
+</p-dialog>
